/*
 * $Id: ChangeLog,v 1.2709 2004/04/01 16:13:52 srobert Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-04-02 03:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/compiler/genc.c
    ! minor formatting and comments

  * include/hbdefs.h
    ! simplified HB_FUNC* macros

  * Rename ChangeLog to ChangeLog.019